BoFiN: fixed citation issue

--- a/qutip/nonmarkov/bofin/docs/bibliography/main.bib
+++ b/qutip/nonmarkov/bofin/docs/bibliography/main.bib
@@ -6,20 +6,19 @@
   journal={arXiv preprint arXiv:1903.05892},
   year={2019}
 }
+
 @article{Tanimura2020,
-author = {Tanimura,Yoshitaka },
-title = {Numerically “exact” approach to open quantum dynamics: The hierarchical equations of motion (HEOM)},
-journal = {The Journal of Chemical Physics},
-volume = {153},
-number = {2},
-pages = {020901},
-year = {2020},
-doi = {10.1063/5.0011599},
-URL = { 
-        https://doi.org/10.1063/5.0011599
-    
-},
+  author = {Tanimura,Yoshitaka },
+  title = {Numerically “exact” approach to open quantum dynamics: The hierarchical equations of motion (HEOM)},
+  journal = {The Journal of Chemical Physics},
+  volume = {153},
+  number = {2},
+  pages = {020901},
+  year = {2020},
+  doi = {10.1063/5.0011599},
+  URL = {https://doi.org/10.1063/5.0011599},
 }
+
 @article{Tanimura_1989,
   author       = {Yoshitaka Tanimura and Ryogo Kubo},
   title        = {Time Evolution of a Quantum System in Contact with a Nearly Gaussian-Markoffian Noise Bath},
