--- a/Fitting_HEOM.ipynb
+++ b/Fitting_HEOM.ipynb
@@ -52,13 +52,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "3dac107b-86ff-4b6c-9662-a726080c617a",
    "metadata": {},
    "outputs": [],
    "source": [
     "alpha=0.05\n",
-    "T=0.5\n",
+    "T=1\n",
     "wc=1"
    ]
   },
@@ -74,12 +74,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "14741f8b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "obp=heom.FitBath(alpha,T,wc,sigmaz())"
+    "obp=heom.FitBath(alpha,T,wc,sigmax())"
    ]
   },
   {
@@ -157,12 +157,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "4b07bd43-970c-414f-9cb2-159fa0397375",
+   "execution_count": 34,
+   "id": "f912ea29-93f1-4338-b053-9f8f92e77949",
    "metadata": {},
    "outputs": [],
    "source": [
-    "obp.matsubara_coefficients_from_spectral_fit(Nk=15);"
+    "obp.params_spec = [1], [1], [1]\n",
+    "obp.matsubara_coefficients_from_spectral_fit(Nk=2)\n",
+    "ckAR2, vkAr2, ckAI2, vkAI2 = obp.matsubara_coeff_spec[:-1]\n",
+    "test_terminator = obp.matsubara_coeff_spec[-1].full()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "86458873-cfd4-47a9-8a55-57b0dabe73dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.00010175-0.j,  0.        +0.j,  0.        +0.j,\n",
+       "        -0.00010175+0.j],\n",
+       "       [ 0.        +0.j,  0.00010175-0.j, -0.00010175+0.j,\n",
+       "         0.        +0.j],\n",
+       "       [ 0.        +0.j, -0.00010175+0.j,  0.00010175-0.j,\n",
+       "         0.        +0.j],\n",
+       "       [-0.00010175+0.j,  0.        +0.j,  0.        +0.j,\n",
+       "         0.00010175-0.j]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_terminator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "71510035-bd94-4627-b94d-7eb37f5b7990",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([(0.29298628613108785-0.2097848947562078j),\n",
+       "  (0.29298628613108785+0.2097848947562078j),\n",
+       "  (-0.01608448645347298+0j),\n",
+       "  (-0.002015397620259254+0j)],\n",
+       " [(1-1j), (1+1j), (6.283185307179586+0j), (12.566370614359172+0j)],\n",
+       " [(-0-0.25j), 0.25j],\n",
+       " [(1+1j), (1-1j)])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " obp.matsubara_coeff_spec[:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "4f8178e2-8551-457e-a6bd-7aa2c7e45750",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.isclose(ans_terminator,test_terminator).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5912b6ee-5f0d-4b49-8b37-18351d03e3db",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'FitBath' object has no attribute 'bath'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mobp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbath\u001b[49m\u001b[38;5;241m.\u001b[39mparams_spec \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m], [\u001b[38;5;241m1\u001b[39m], [\u001b[38;5;241m1\u001b[39m]\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'FitBath' object has no attribute 'bath'"
+     ]
+    }
+   ],
+   "source": [
+    "obp.bath.params_spec = [1], [1], [1]"
    ]
   },
   {
