replaced tests to match new classes

--- a/OhmicBath.ipynb
+++ b/OhmicBath.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "2bb296b7-6f64-4660-a79a-30309e63153f",
    "metadata": {},
    "outputs": [],
@@ -43,9 +43,7 @@
    "id": "7cad3ae4-1f51-4950-9d7f-b8c7ac6f0f77",
    "metadata": {},
    "source": [
-    "Obtaining an Ohmic Bath via Correlation functions\n",
-    "\n",
-    "If no Nk option is specified than the Ohmic bath is obtained by fitting the ohmic correlation function"
+    "Obtaining an Ohmic Bath via Correlation functions"
    ]
   },
   {
@@ -58,22 +56,72 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parameters [k=1]: lam=[0.0400059]; gamma=[-0.93092427]; w0=[1.45452728e-11], Obtain a normalized RMSE of 9.285525683887682e-05 for <function FitCorr.fit_correlation.<locals>.<lambda> at 0x7f96b0717420>\n",
-      "Parameters [k=1]: lam=[-0.05168647]; gamma=[-1.52063251]; w0=[0.80991369], Obtain a normalized RMSE of 0.0001365926583356062 for <function FitCorr.fit_correlation.<locals>.<lambda> at 0x7f96b0717420>\n",
-      "Parameters [k=2]: lam=[0.01838259 0.02127905]; gamma=[-0.51510725 -1.01867567]; w0=[8.13990954e-23 9.62439167e-01], Obtain a normalized RMSE of 4.9001478947984185e-05 for <function FitCorr.fit_correlation.<locals>.<lambda> at 0x7f968d5ed080>\n",
-      "Parameters [k=2]: lam=[-0.01514431 -0.05168647]; gamma=[-1.4505411  -1.16604535]; w0=[1.78000917 0.29085894], Obtain a normalized RMSE of 5.0729015341566845e-05 for <function FitCorr.fit_correlation.<locals>.<lambda> at 0x7f968d5ed9e0>\n",
-      "Parameters [k=3]: lam=[ 0.00505853  0.04108794 -0.00938488]; gamma=[-0.28450327 -1.31653786 -4.7192563 ]; w0=[5.32913163e-18 4.76861197e-18 4.89079601e+00], Obtain a normalized RMSE of 1.3300348986564378e-05 for <function FitCorr.fit_correlation.<locals>.<lambda> at 0x7f968d5edc60>\n",
-      "Parameters [k=3]: lam=[-0.01321142 -0.00472934 -0.05160988]; gamma=[-1.0930975  -1.18618761 -0.99671087]; w0=[1.36922582 2.69680727 0.16469708], Obtain a normalized RMSE of 3.3177592782599805e-05 for <function FitCorr.fit_correlation.<locals>.<lambda> at 0x7f968d5edee0>\n",
-      "Parameters [k=4]: lam=[ 0.0114574   0.35536488  0.00614465 -0.33426881]; gamma=[-0.65465667 -0.33942822 -0.86761164 -0.33102889]; w0=[0.97216284 0.1842804  2.03199239 0.18635836], Obtain a normalized RMSE of 2.934218309155666e-05 for <function FitCorr.fit_correlation.<locals>.<lambda> at 0x7f968d5ee160>\n",
-      "Parameters [k=4]: lam=[-0.05168647  0.00639009 -0.0516864  -0.05168647]; gamma=[-2.18143966 -4.28463493 -0.41243672 -1.20555178]; w0=[9.56709485e-01 4.34778172e+00 3.94930725e-03 1.93028381e-01], Obtain a normalized RMSE of 1.8976451794939394e-06 for <function FitCorr.fit_correlation.<locals>.<lambda> at 0x7f968d5ee3e0>\n",
-      "Parameters [k=5]: lam=[ 3.56995371e-04  2.73262070e-02  4.50298483e-01  4.95009320e-03\n",
-      " -4.46453199e-01]; gamma=[-0.07584012 -1.08735982 -4.55944252 -0.35491248 -4.66434324]; w0=[5.89921272e-34 9.83964128e-10 5.80552670e-06 2.86727123e-66\n",
-      " 7.81692659e-01], Obtain a normalized RMSE of 1.058745209592887e-06 for <function FitCorr.fit_correlation.<locals>.<lambda> at 0x7f968d5ee660>\n",
-      "Parameters [k=5]: lam=[ 0.00679248 -0.03966203 -0.0289584  -0.05168523 -0.05168647]; gamma=[-4.29316501 -2.2575606  -0.20716045 -0.63337625 -1.41277204]; w0=[4.20965750e+00 1.10766913e+00 4.53564053e-04 1.54008874e-02\n",
-      " 3.01004970e-01], Obtain a normalized RMSE of 5.39919323608056e-07 for <function FitCorr.fit_correlation.<locals>.<lambda> at 0x7f968d5ee8e0>\n",
-      "Parameters [k=6]: lam=[ 2.98972988e-03  3.06548585e-01  1.76152132e-01  2.31267863e-04\n",
-      " -1.88095513e-01 -2.61364941e-01]; gamma=[-0.27633113 -1.18310137 -4.04981557 -0.06199101 -4.1258756  -1.14698447]; w0=[2.39300512e-30 2.75092660e-05 2.44640847e+00 2.10659353e-38\n",
-      " 2.51967676e+00 1.73198380e-01], Obtain a normalized RMSE of 4.3404271802370226e-07 for <function FitCorr.fit_correlation.<locals>.<lambda> at 0x7f968d5eec00>\n"
+      "Fitting The real Part of the correlation function ..... \n",
+      "Parameters [k=1]: \n",
+      " \t lam=[0.0400059] \n",
+      " \t gamma=[-0.93092427] \n",
+      " \t w0=[1.45452728e-11] \n",
+      " Normalized RMSE = 9.285525683887682e-05\n",
+      "Parameters [k=2]: \n",
+      " \t lam=[0.01838259 0.02127905] \n",
+      " \t gamma=[-0.51510725 -1.01867567] \n",
+      " \t w0=[8.13990954e-23 9.62439167e-01] \n",
+      " Normalized RMSE = 4.9001478947984185e-05\n",
+      "Parameters [k=3]: \n",
+      " \t lam=[ 0.00505853  0.04108794 -0.00938488] \n",
+      " \t gamma=[-0.28450327 -1.31653786 -4.7192563 ] \n",
+      " \t w0=[5.32913163e-18 4.76861197e-18 4.89079601e+00] \n",
+      " Normalized RMSE = 1.3300348986564378e-05\n",
+      "Parameters [k=4]: \n",
+      " \t lam=[ 0.0114574   0.35536488  0.00614465 -0.33426881] \n",
+      " \t gamma=[-0.65465667 -0.33942822 -0.86761164 -0.33102889] \n",
+      " \t w0=[0.97216284 0.1842804  2.03199239 0.18635836] \n",
+      " Normalized RMSE = 2.934218309155666e-05\n",
+      "Parameters [k=5]: \n",
+      " \t lam=[ 3.56995371e-04  2.73262070e-02  4.50298483e-01  4.95009320e-03\n",
+      " -4.46453199e-01] \n",
+      " \t gamma=[-0.07584012 -1.08735982 -4.55944252 -0.35491248 -4.66434324] \n",
+      " \t w0=[5.89921272e-34 9.83964128e-10 5.80552670e-06 2.86727123e-66\n",
+      " 7.81692659e-01] \n",
+      " Normalized RMSE = 1.058745209592887e-06\n",
+      "Parameters [k=6]: \n",
+      " \t lam=[ 2.98972988e-03  3.06548585e-01  1.76152132e-01  2.31267863e-04\n",
+      " -1.88095513e-01 -2.61364941e-01] \n",
+      " \t gamma=[-0.27633113 -1.18310137 -4.04981557 -0.06199101 -4.1258756  -1.14698447] \n",
+      " \t w0=[2.39300512e-30 2.75092660e-05 2.44640847e+00 2.10659353e-38\n",
+      " 2.51967676e+00 1.73198380e-01] \n",
+      " Normalized RMSE = 4.3404271802370226e-07\n",
+      "Desired RMSE reached\n",
+      "\n",
+      "\n",
+      "Fitting the imaginary [art of the correlation function ..... \n",
+      "Parameters [k=1]: \n",
+      " \t lam=[-0.05168647] \n",
+      " \t gamma=[-1.52063251] \n",
+      " \t w0=[0.80991369] \n",
+      " Normalized RMSE = 0.0001365926583356062\n",
+      "Parameters [k=2]: \n",
+      " \t lam=[-0.01514431 -0.05168647] \n",
+      " \t gamma=[-1.4505411  -1.16604535] \n",
+      " \t w0=[1.78000917 0.29085894] \n",
+      " Normalized RMSE = 5.0729015341566845e-05\n",
+      "Parameters [k=3]: \n",
+      " \t lam=[-0.01321142 -0.00472934 -0.05160988] \n",
+      " \t gamma=[-1.0930975  -1.18618761 -0.99671087] \n",
+      " \t w0=[1.36922582 2.69680727 0.16469708] \n",
+      " Normalized RMSE = 3.3177592782599805e-05\n",
+      "Parameters [k=4]: \n",
+      " \t lam=[-0.05168647  0.00639009 -0.0516864  -0.05168647] \n",
+      " \t gamma=[-2.18143966 -4.28463493 -0.41243672 -1.20555178] \n",
+      " \t w0=[9.56709485e-01 4.34778172e+00 3.94930725e-03 1.93028381e-01] \n",
+      " Normalized RMSE = 1.8976451794939394e-06\n",
+      "Parameters [k=5]: \n",
+      " \t lam=[ 0.00679248 -0.03966203 -0.0289584  -0.05168523 -0.05168647] \n",
+      " \t gamma=[-4.29316501 -2.2575606  -0.20716045 -0.63337625 -1.41277204] \n",
+      " \t w0=[4.20965750e+00 1.10766913e+00 4.53564053e-04 1.54008874e-02\n",
+      " 3.01004970e-01] \n",
+      " Normalized RMSE = 5.39919323608056e-07\n",
+      "Desired RMSE reached\n"
      ]
     }
    ],
@@ -91,17 +139,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.1%. Run time:   0.66s. Est. time left: 00:00:00:05\n",
-      "20.2%. Run time:   0.88s. Est. time left: 00:00:00:03\n",
-      "30.3%. Run time:   1.08s. Est. time left: 00:00:00:02\n",
-      "40.4%. Run time:   1.28s. Est. time left: 00:00:00:01\n",
-      "50.5%. Run time:   1.48s. Est. time left: 00:00:00:01\n",
-      "60.6%. Run time:   1.68s. Est. time left: 00:00:00:01\n",
-      "70.7%. Run time:   1.87s. Est. time left: 00:00:00:00\n",
-      "80.8%. Run time:   2.07s. Est. time left: 00:00:00:00\n",
-      "90.9%. Run time:   2.27s. Est. time left: 00:00:00:00\n",
-      "100.0%. Run time:   2.45s. Est. time left: 00:00:00:00\n",
-      "Total run time:   2.45s\n"
+      "10.1%. Run time:   0.48s. Est. time left: 00:00:00:04\n",
+      "20.2%. Run time:   0.72s. Est. time left: 00:00:00:02\n",
+      "30.3%. Run time:   0.89s. Est. time left: 00:00:00:02\n",
+      "40.4%. Run time:   1.08s. Est. time left: 00:00:00:01\n",
+      "50.5%. Run time:   1.26s. Est. time left: 00:00:00:01\n",
+      "60.6%. Run time:   1.43s. Est. time left: 00:00:00:00\n",
+      "70.7%. Run time:   1.62s. Est. time left: 00:00:00:00\n",
+      "80.8%. Run time:   1.80s. Est. time left: 00:00:00:00\n",
+      "90.9%. Run time:   1.98s. Est. time left: 00:00:00:00\n",
+      "100.0%. Run time:   2.13s. Est. time left: 00:00:00:00\n",
+      "Total run time:   2.13s\n"
      ]
     }
    ],
@@ -118,7 +166,7 @@
    "source": [
     "Obtaining an Ohmic Bath via Spectral density\n",
     "\n",
-    "If the Nk option is specified than the Ohmic bath is obtained by fitting the ohmic spectral density "
+    "If the spectral method is specified than the Ohmic bath is obtained by fitting the ohmic spectral density "
    ]
   },
   {
@@ -131,14 +179,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parameters [k=1]: lam=[0.09457428]; gamma=[1.77937199]; w0=[0.10001], Obtain a normalized RMSE of 0.00014398396812732766 for <bound method FitSpectral.spectral_density_approx of <qutip.solver.heom.bofin_baths.OhmicBath object at 0x7f968d979640>>\n",
-      "Parameters [k=2]: lam=[0.03403633 0.05018147]; gamma=[1.24962434 1.43433081]; w0=[0.10001    1.80573553], Obtain a normalized RMSE of 7.111440183258405e-05 for <bound method FitSpectral.spectral_density_approx of <qutip.solver.heom.bofin_baths.OhmicBath object at 0x7f968d979640>>\n",
-      "Parameters [k=3]: lam=[-0.05569379  0.00403359  0.11663765]; gamma=[4.17975242 0.73506475 2.13429103]; w0=[4.66786664 0.10001    0.10001   ], Obtain a normalized RMSE of 1.1895125773352943e-05 for <bound method FitSpectral.spectral_density_approx of <qutip.solver.heom.bofin_baths.OhmicBath object at 0x7f968d979640>>\n",
-      "Parameters [k=4]: lam=[ 0.00016261 -0.06777505  0.00923493  0.1217659 ]; gamma=[0.30722683 4.29819612 1.00218015 2.2958791 ]; w0=[0.10001    3.98389103 0.10001    0.10001   ], Obtain a normalized RMSE of 2.0705179688381157e-06 for <bound method FitSpectral.spectral_density_approx of <qutip.solver.heom.bofin_baths.OhmicBath object at 0x7f968d979640>>\n",
-      "Parameters [k=5]: lam=[-3.45169868e-01 -7.31351150e-01  1.42042940e-04  4.12654516e-01\n",
-      "  7.27871501e-01]; gamma=[1.31942962 4.67723361 0.29373219 1.3839406  4.55989746]; w0=[0.284329   1.69285141 0.10001    0.10001    0.13596062], Obtain a normalized RMSE of 1.8947353495975248e-06 for <bound method FitSpectral.spectral_density_approx of <qutip.solver.heom.bofin_baths.OhmicBath object at 0x7f968d979640>>\n",
-      "Parameters [k=6]: lam=[-1.15428794e-01 -1.64634021e+00  1.57992447e-05  2.42732590e-02\n",
-      "  1.15826192e-03  1.80042203e+00]; gamma=[4.65948146 3.43169804 0.14662752 1.37248801 0.57617451 3.42404702]; w0=[3.48138857 0.65041495 0.10001    0.10001    0.10001    0.10001003], Obtain a normalized RMSE of 8.830797909254175e-07 for <bound method FitSpectral.spectral_density_approx of <qutip.solver.heom.bofin_baths.OhmicBath object at 0x7f968d979640>>\n"
+      "Fitting the Spectral density with k  Underdamped Drude Lorentz .......\n",
+      "Parameters [k=1]: \n",
+      " \t lam=[0.09457428] \n",
+      " \t gamma=[1.77937199] \n",
+      " \t w0=[0.10001] \n",
+      " Normalized RMSE = 0.00014398396812732766\n",
+      "Parameters [k=2]: \n",
+      " \t lam=[0.03403633 0.05018147] \n",
+      " \t gamma=[1.24962434 1.43433081] \n",
+      " \t w0=[0.10001    1.80573553] \n",
+      " Normalized RMSE = 7.111440183258405e-05\n",
+      "Parameters [k=3]: \n",
+      " \t lam=[-0.05569379  0.00403359  0.11663765] \n",
+      " \t gamma=[4.17975242 0.73506475 2.13429103] \n",
+      " \t w0=[4.66786664 0.10001    0.10001   ] \n",
+      " Normalized RMSE = 1.1895125773352943e-05\n",
+      "Parameters [k=4]: \n",
+      " \t lam=[ 0.00016261 -0.06777505  0.00923493  0.1217659 ] \n",
+      " \t gamma=[0.30722683 4.29819612 1.00218015 2.2958791 ] \n",
+      " \t w0=[0.10001    3.98389103 0.10001    0.10001   ] \n",
+      " Normalized RMSE = 2.0705179688381157e-06\n",
+      "Parameters [k=5]: \n",
+      " \t lam=[-3.45169868e-01 -7.31351150e-01  1.42042940e-04  4.12654516e-01\n",
+      "  7.27871501e-01] \n",
+      " \t gamma=[1.31942962 4.67723361 0.29373219 1.3839406  4.55989746] \n",
+      " \t w0=[0.284329   1.69285141 0.10001    0.10001    0.13596062] \n",
+      " Normalized RMSE = 1.8947353495975248e-06\n",
+      "Parameters [k=6]: \n",
+      " \t lam=[-1.15428794e-01 -1.64634021e+00  1.57992447e-05  2.42732590e-02\n",
+      "  1.15826192e-03  1.80042203e+00] \n",
+      " \t gamma=[4.65948146 3.43169804 0.14662752 1.37248801 0.57617451 3.42404702] \n",
+      " \t w0=[3.48138857 0.65041495 0.10001    0.10001    0.10001    0.10001003] \n",
+      " Normalized RMSE = 8.830797909254175e-07\n",
+      "Desired RMSE reached.\n"
      ]
     }
    ],
@@ -156,17 +230,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.1%. Run time:   0.91s. Est. time left: 00:00:00:08\n",
-      "20.2%. Run time:   1.26s. Est. time left: 00:00:00:04\n",
-      "30.3%. Run time:   1.54s. Est. time left: 00:00:00:03\n",
-      "40.4%. Run time:   1.84s. Est. time left: 00:00:00:02\n",
-      "50.5%. Run time:   2.10s. Est. time left: 00:00:00:02\n",
-      "60.6%. Run time:   2.33s. Est. time left: 00:00:00:01\n",
-      "70.7%. Run time:   2.56s. Est. time left: 00:00:00:01\n",
-      "80.8%. Run time:   2.79s. Est. time left: 00:00:00:00\n",
-      "90.9%. Run time:   2.99s. Est. time left: 00:00:00:00\n",
-      "100.0%. Run time:   3.19s. Est. time left: 00:00:00:00\n",
-      "Total run time:   3.19s\n"
+      "10.1%. Run time:   0.68s. Est. time left: 00:00:00:06\n",
+      "20.2%. Run time:   1.04s. Est. time left: 00:00:00:04\n",
+      "30.3%. Run time:   1.29s. Est. time left: 00:00:00:02\n",
+      "40.4%. Run time:   1.53s. Est. time left: 00:00:00:02\n",
+      "50.5%. Run time:   1.77s. Est. time left: 00:00:00:01\n",
+      "60.6%. Run time:   2.05s. Est. time left: 00:00:00:01\n",
+      "70.7%. Run time:   2.29s. Est. time left: 00:00:00:00\n",
+      "80.8%. Run time:   2.54s. Est. time left: 00:00:00:00\n",
+      "90.9%. Run time:   2.76s. Est. time left: 00:00:00:00\n",
+      "100.0%. Run time:   3.04s. Est. time left: 00:00:00:00\n",
+      "Total run time:   3.04s\n"
      ]
     }
    ],
@@ -257,14 +331,6 @@
     "plt.ylabel(r'$J( \\omega )$')\n",
     "plt.xlabel(r'$\\omega$')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c4cd4157-f1a3-4ed9-9293-45777606b5ca",
-   "metadata": {},
-   "source": [
-    "Both approaches of obtaining the Ohmic bath yield almost identical results, as expected "
    ]
   }
  ],
