Rewrote summary methods,added comments,eliminated unnecessary code

--- a/parity_kondo.ipynb
+++ b/parity_kondo.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "id": "bce9f4d5",
    "metadata": {},
    "outputs": [],
@@ -190,8 +190,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "2a37cf72",
+   "execution_count": 38,
+   "id": "ac623787",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "\twith 241176 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
+   "id": "bda789de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dense(shape=(4, 4), fortran=False)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fullss.rho.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "id": "0b5d4663",
    "metadata": {},
    "outputs": [
@@ -221,9 +242,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5255/468189688.py:25: DeprecationWarning: scipy.sparse.linalg.lgmres called without specifying `atol`. The default value will change in the future. To preserve current behavior, set ``atol=tol``.\n",
+      "/tmp/ipykernel_29494/468189688.py:25: DeprecationWarning: scipy.sparse.linalg.lgmres called without specifying `atol`. The default value will change in the future. To preserve current behavior, set ``atol=tol``.\n",
       "  x2, fidelity2 = lgmres(D2(w), rho0d1)\n",
-      "/tmp/ipykernel_5255/468189688.py:31: DeprecationWarning: scipy.sparse.linalg.lgmres called without specifying `atol`. The default value will change in the future. To preserve current behavior, set ``atol=tol``.\n",
+      "/tmp/ipykernel_29494/468189688.py:31: DeprecationWarning: scipy.sparse.linalg.lgmres called without specifying `atol`. The default value will change in the future. To preserve current behavior, set ``atol=tol``.\n",
       "  x3, fidelity3 = lgmres(D3(w),  rho0d1dag)\n"
      ]
     }
@@ -272,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "id": "5b79f2ac",
    "metadata": {},
    "outputs": [],
@@ -294,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "id": "f37cacaa",
    "metadata": {},
    "outputs": [
@@ -334,6 +355,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1af241ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a9531c3",
    "metadata": {},
    "outputs": [],
    "source": []
